style: improve footer layout and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -183,6 +183,53 @@
     </section>
 
     <footer>
-    </footer>     
+        <div class="footer-top">
+            <div class="container footer-top-inner">
+            <div class="footer-top-box box1">
+                <h3>Health Insurance</h3>
+                <p>Here in Medicenter we have individual →</p>
+            </div>
+
+            <div class="footer-top-box box2">
+                <h3>Medical Records</h3>
+                <p>Here in Medicenter we have individual →</p>
+            </div>
+
+            <div class="footer-top-box box3">
+                <h3>Online Bill Payment</h3>
+                <p>Here in Medicenter we have individual →</p>
+            </div>
+            </div>
+        </div>
+
+        <div class="footer-container">
+            <div class="footer-column">
+            <h3>Medicenter Clinic</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>33 Farlane Street</p>
+            <p>Keilor East</p>
+            <p>VIC 3033, Australia</p>
+            <p><strong>medicenter@mail.com</strong></p>
+            </div>
+
+            <div class="footer-column">
+            <h3>Latest Posts</h3>
+            <p>→ Lorem ipsum dolor sit amet</p>
+            <p>→ Lorem ipsum dolor sit amet</p>
+            <p>→ Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <div class="footer-column">
+            <h3>Latest Tweets</h3>
+            <p>→ We've released new version (v1.2)</p>
+            <p>→ We've released new version (v1.2)</p>
+            <p>→ We've released new version (v1.2)</p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            2024 © All rights reserved
+        </div>
+    </footer>
 </body>
 </html>
