feat: add responsive mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </div>
         <div class="menu">
              <nav>
+                <div class="menuMobile">
+                    <div class="mm_line"></div>
+                    <div class="mm_line"></div>
+                    <div class="mm_line"></div>
+                </div>
                  <ul>
                     <li class="active"><a href="">Home</a></li>
                     <li><a href="">Blog</a></li>
@@ -231,5 +236,7 @@
             2024 © All rights reserved
         </div>
     </footer>
+
+<script src="assets/js/script.js"></script>
 </body>
 </html>
